Fix: Spacing of subscribe button links
Remove bootstrap

--- a/app/assets/stylesheets/components/_subscribe_box.scss
+++ b/app/assets/stylesheets/components/_subscribe_box.scss
@@ -1,3 +1,7 @@
+.navigation .fr-subscribe-box {
+  margin-bottom: 15px;
+}
+
 .fr-subscribe-box {
   background-color: $color-enhanced-light;
   border-bottom: 1px solid $color-enhanced;
